# ava-capture

./: .gitignore  CHANGES  CONTRIBUTING.md  LICENSE.txt  README.md
ava/archive/migrations/: 0018_auto_20170831_1529.py
capture-node/: .gitignore  CMakeLists.txt  GitUtils.cmake  GitUtils.cmake.in  autorun.py  raw_file_format_readers.py  run_node_loop.sh
capture-node/source/: __init__.py  audio.cpp  audio.hpp  autorun.py  base64.cpp  base64.hpp  build.xml  cameras.cpp  cameras.hpp  capturenode.cpp  capturenode.hpp  color_correction.cpp  color_correction.hpp  drivebench.cpp  drivebench.hpp  embedded_python.cpp  embedded_python.hpp  hardware_sync.py  hardwaresync.cpp  hardwaresync.hpp  httpserver.cpp  httpserver.hpp  json.hpp  main.cpp  node_ws_server.cpp  node_ws_server.hpp  nodehttpserver.cpp  nodehttpserver.hpp  recorder.cpp  recorder.hpp  server_uplink.cpp  server_uplink.hpp  statemachine.hpp  video_encoder.cpp  video_encoder.hpp  video_writer.hpp  video_writer_ava.cpp  video_writer_ava.hpp  video_writer_avi.cpp  video_writer_avi.hpp  (+2 more)
capture-node/ximea_test/: CMakeLists.txt  Makefile  stdafx.h  ximeaTest.cpp  ximeaTest.py  ximeaTest.sln  ximeaTest.vcxproj
hardware/ximea_camera_sync/: ximea_camera_sync.ino
job_client/: .gitignore  job_client.py  job_client_test.py  requirements27.txt  version.py
job_client/jobs/: __init__.py  archive.py  base.py  common.py  credentials.py  test.py  thumbnails.py
src/app/archive/: set-frame-dialog.ts
website-backend/: .gitignore  Dockerfile  LICENSE  README.md  RUN_DEV_WEBSERVER.cmd  RUN_DEV_WEBSERVER_DOCKER.cmd  requirements.txt  run_dev_webserver_venv.sh
website-backend/ava/: ava.wsgi  ava_nginx.conf  ava_uwsgi.ini  create_db.py  manage.py  test.py
website-backend/ava/accounts/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
website-backend/ava/archive/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
website-backend/ava/ava/: dev_secure_settings.py  metrics.py  oauth2.py  settings.py  urls.py  wsgi.py
website-backend/ava/capture/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
website-backend/ava/common/: uuid_utils.py  views.py
website-backend/ava/jobs/: admin.py  apps.py  aws.py  metrics.py  models.py  serializers.py  tests.py  urls.py  views.py
website-frontend/: .gitignore  Dockerfile  LICENSE  README.md  build_with_docker.sh  package.json  tsconfig.json
website-frontend/config/: webpack.common.js  webpack.dev.js  webpack.prod.js
website-frontend/src/: auth.module.ts  index.html  main.ts  vendor.ts
website-frontend/src/app/: app.component.ts  app.module.ts  common.module.ts  notifications.service.ts
website-frontend/src/pipes/: ago-pipe.ts  contains-pipe.ts  data-size.pipe.ts  duration-pipe.ts  (+1 more)
(+175 files in other folders)
